--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>83680851823-uq50fs2p9putc06h10iuulpr7rn738fm.apps.googleusercontent.com</string>
+	<string>83680851823-dd7566o8qia73p7blmrirjf4nb9dglqr.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.83680851823-uq50fs2p9putc06h10iuulpr7rn738fm</string>
+	<string>com.googleusercontent.apps.83680851823-dd7566o8qia73p7blmrirjf4nb9dglqr</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAV6iHoJTf062EhIomdCcxzO2bNywTQpNQ</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>io.rockside.smartwallet</string>
+	<string>io.rockside.moonkey</string>
 	<key>PROJECT_ID</key>
 	<string>smartwallet-b677c</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +29,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:83680851823:ios:6830fba6960177a7a95a9a</string>
+	<string>1:83680851823:ios:d80f169c1fd9f802a95a9a</string>
 	<key>DATABASE_URL</key>
 	<string>https://smartwallet-b677c.firebaseio.com</string>
 </dict>
